feat: added service and ajuste de foote

--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
                   <a class="nav-link" href="#" data-link="about">About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" data-link="skills-services"
-                    >Skills</a
+                  <a class="nav-link" href="#" data-link="skills">Skills</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#" data-link="services"
+                    >What I do</a
                   >
                 </li>
                 <li class="nav-item">
@@ -939,7 +942,7 @@
           </div>
         </section>
 
-        <section id="skills-services">
+        <section id="skills">
           <div class="box-title box-gray col-12">
             <h2>< Skills ></h2>
             <span class="line"></span>
@@ -947,71 +950,156 @@
 
           <div class="container">
             <div class="row">
-              <div class="card skill col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="card-body">
-                  <h5 class="card-title">Hard</h5>
-                  <h6 class="card-subtitle mb-2 text-body-secondary">
-                    My technical skills include...
-                  </h6>
-                  <span class="badge rounded-pill">HTML</span>
-                  <span class="badge rounded-pill">CSS3</span>
-                  <span class="badge rounded-pill">JavaScript</span>
-                  <span class="badge rounded-pill">VUE.js</span>
-                  <span class="badge rounded-pill">Angular</span>
-                  <span class="badge rounded-pill">React</span>
-                  <span class="badge rounded-pill">TypeScript</span>
-                  <span class="badge rounded-pill">Doker</span>
-                  <span class="badge rounded-pill">Bootstrap</span>
-                  <span class="badge rounded-pill">Less</span>
-                  <span class="badge rounded-pill">SASS</span>
-                  <span class="badge rounded-pill">GitHub</span>
-                  <span class="badge rounded-pill">Node</span>
-                  <span class="badge rounded-pill">NPM</span>
-                  <span class="badge rounded-pill">Jest</span>
-                  <span class="badge rounded-pill">Storybook</span>
-                  <span class="badge rounded-pill">Testing Library</span>
-                  <span class="badge rounded-pill">Jenkins</span>
-                  <span class="badge rounded-pill">AWS</span>
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 mb-3 mb-sm-0">
+                <div class="card skill">
+                  <div class="card-body">
+                    <h5 class="card-title">Hard</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">
+                      My technical skills include...
+                    </h6>
+                    <span class="badge rounded-pill">HTML</span>
+                    <span class="badge rounded-pill">CSS3</span>
+                    <span class="badge rounded-pill">JavaScript</span>
+                    <span class="badge rounded-pill">VUE.js</span>
+                    <span class="badge rounded-pill">Angular</span>
+                    <span class="badge rounded-pill">React</span>
+                    <span class="badge rounded-pill">TypeScript</span>
+                    <span class="badge rounded-pill">Doker</span>
+                    <span class="badge rounded-pill">Bootstrap</span>
+                    <span class="badge rounded-pill">Less</span>
+                    <span class="badge rounded-pill">SASS</span>
+                    <span class="badge rounded-pill">GitHub</span>
+                    <span class="badge rounded-pill">Node</span>
+                    <span class="badge rounded-pill">NPM</span>
+                    <span class="badge rounded-pill">Jest</span>
+                    <span class="badge rounded-pill">Storybook</span>
+                    <span class="badge rounded-pill">Testing Library</span>
+                    <span class="badge rounded-pill">Jenkins</span>
+                    <span class="badge rounded-pill">AWS</span>
+                    <span class="badge rounded-pill">Prototyping</span>
+                  </div>
                 </div>
               </div>
 
-              <div class="card skill col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="card-body">
-                  <h5 class="card-title">Soft</h5>
-                  <h6 class="card-subtitle mb-2 text-body-secondary">
-                    My personal skills include...
-                  </h6>
-                  <span class="badge rounded-pill">Executor</span>
-                  <span class="badge rounded-pill">Communicative</span>
-                  <span class="badge rounded-pill">Planner</span>
-                  <span class="badge rounded-pill">Analyst</span>
-                  <span class="badge rounded-pill">Committed</span>
-                  <span class="badge rounded-pill">Teamwork</span>
-                  <span class="badge rounded-pill">Non-stop learning</span>
-                  <span class="badge rounded-pill">Open-minded</span>
-                  <span class="badge rounded-pill">Proactive</span>
-                  <span class="badge rounded-pill">Patient</span>
-                  <span class="badge rounded-pill">Organized</span>
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 mb-3 mb-sm-0">
+                <div class="card skill">
+                  <div class="card-body">
+                    <h5 class="card-title">Soft</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">
+                      My personal skills include...
+                    </h6>
+                    <span class="badge rounded-pill">Executor</span>
+                    <span class="badge rounded-pill">Communicative</span>
+                    <span class="badge rounded-pill">Planner</span>
+                    <span class="badge rounded-pill">Analyst</span>
+                    <span class="badge rounded-pill">Committed</span>
+                    <span class="badge rounded-pill">Teamwork</span>
+                    <span class="badge rounded-pill">Non-stop learning</span>
+                    <span class="badge rounded-pill">Open-minded</span>
+                    <span class="badge rounded-pill">Proactive</span>
+                    <span class="badge rounded-pill">Patient</span>
+                    <span class="badge rounded-pill">Organized</span>
+                  </div>
                 </div>
               </div>
 
-              <div class="card skill col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="card-body">
-                  <h5 class="card-title">Idiomas</h5>
-                  <h6 class="card-subtitle mb-2 text-body-secondary">
-                    My language skills include...
-                  </h6>
-                  <span class="badge rounded-pill">Portuguese - Native</span>
-                  <span class="badge rounded-pill">English - Intermediate</span>
-                  <span class="badge rounded-pill">Spanish - Beginner</span>
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 mb-3 mb-sm-0">
+                <div class="card skill">
+                  <div class="card-body">
+                    <h5 class="card-title">Differentials</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">
+                      My work differentials skills include...
+                    </h6>
+                    <span class="badge rounded-pill">Agile Methodologies</span>
+                    <span class="badge rounded-pill">Clean Code</span>
+                    <span class="badge rounded-pill">Technical Lead</span>
+                    <span class="badge rounded-pill">Project Management</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-6 mb-3 mb-sm-0">
+                <div class="card skill">
+                  <div class="card-body">
+                    <h5 class="card-title">Idiomas</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">
+                      My language skills include...
+                    </h6>
+                    <span class="badge rounded-pill">Portuguese - Native</span>
+                    <span class="badge rounded-pill"
+                      >English - Intermediate</span
+                    >
+                    <span class="badge rounded-pill">Spanish - Beginner</span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </section>
 
-        <section id="contact">
+        <section id="services">
           <div class="bg-filter">
+            <div class="container-services">
+              <div class="box-title box-white col-12">
+                <h2>< What I do ></h2>
+                <span class="line"></span>
+                <p>Services and Solutions</p>
+              </div>
+
+              <div class="container box-services-content">
+                <div class="row">
+                  <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 services">
+                    <div class="box-services">
+                      <i class="bi bi-code-slash"></i>
+                    </div>
+                    <h3>WebSites</h3>
+                    <p>
+                      Front-end development for websites, applications, and
+                      systems, using web technologies.
+                    </p>
+                  </div>
+
+                  <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 services">
+                    <div class="box-services">
+                      <i class="bi bi-phone"></i>
+                    </div>
+                    <h3>Responsive</h3>
+                    <p>
+                      Development and application of rules for functional
+                      layouts on different devices.
+                    </p>
+                  </div>
+
+                  <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 services">
+                    <div class="box-services">
+                      <i class="bi bi-window-sidebar"></i>
+                    </div>
+                    <h3>User Experience Prototyping</h3>
+                    <p>
+                      Development of low-fidelity prototypes for flow validation
+                      and user experience.
+                    </p>
+                  </div>
+
+                  <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 services">
+                    <div class="box-services">
+                      <i class="bi bi-universal-access-circle"></i>
+                    </div>
+                    <h3>Accessibility</h3>
+                    <p>
+                      The concern with accessible websites stands out among
+                      major brands. An accessible site is important for
+                      inclusion and brand value. Analysis, implementation, and
+                      correction of accessibility in web applications.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <div class="bg-geral">
+          <section id="contact">
             <div class="container-contact">
               <div class="box-title box-white col-12">
                 <h2>< Contacts ></h2>
@@ -1060,17 +1148,20 @@
                 </div>
               </div>
             </div>
-          </div>
-        </section>
-      </main>
+          </section>
 
-      <footer>
-        <p>© made with lot of <i class="bi bi-cup-hot-fill"></i></p>
-        <a href="#" class="to-top"
-          ><p>Voltar ao topo</p>
-          <i class="bi bi-arrow-up"></i>
-        </a>
-      </footer>
+          <footer>
+            <p>
+              Copyright © 2024 Tatieli Ramos Dev, made with lot of
+              <i class="bi bi-cup-hot-fill"></i>
+            </p>
+            <a href="#" class="to-top"
+              ><p>Voltar ao topo</p>
+              <i class="bi bi-arrow-up"></i>
+            </a>
+          </footer>
+        </div>
+      </main>
     </div>
 
     <script
