feat: added new client and ajuste the size

--- a/index.html
+++ b/index.html
@@ -505,6 +505,27 @@
                 <div
                   class="bg-portfolio"
                   style="
+                    background-image: url(img/customers/forum-web-site.png);
+                  "
+                >
+                  <span class="hover"></span>
+                  <div class="valign">
+                    <div class="center row justify-content-center no-gutters">
+                      <h3>Forum</h3>
+                      <h4>Winter Collection 2015</h4>
+                      <p>In service to Aldeia</p>
+                      <span class="badge rounded-pill">Web Site</span>
+                      <span class="badge rounded-pill">Word Press</span>
+                    </div>
+                    <div class="alt-line"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="customers">
+                <div
+                  class="bg-portfolio"
+                  style="
                     background-image: url(img/customers/colcci_spfw_2015.jpg);
                   "
                 >
@@ -559,6 +580,7 @@
                   </div>
                 </div>
               </div>
+              
 
               <div class="customers">
                 <div
@@ -738,6 +760,8 @@
                   </div>
                 </div>
               </div>
+
+              
 
               <div class="customers">
                 <div
