feat: adicionando novas skil

--- a/index.html
+++ b/index.html
@@ -978,26 +978,32 @@
                     <h6 class="card-subtitle mb-2 text-body-secondary">
                       My technical skills include...
                     </h6>
-                    <span class="badge rounded-pill">HTML</span>
-                    <span class="badge rounded-pill">CSS3</span>
-                    <span class="badge rounded-pill">JavaScript</span>
                     <span class="badge rounded-pill">VUE.js</span>
                     <span class="badge rounded-pill">Angular</span>
                     <span class="badge rounded-pill">React</span>
                     <span class="badge rounded-pill">TypeScript</span>
-                    <span class="badge rounded-pill">Doker</span>
-                    <span class="badge rounded-pill">Bootstrap</span>
+                    <span class="badge rounded-pill">JavaScript</span>
+                    <span class="badge rounded-pill">HTML</span>
+                    <span class="badge rounded-pill">CSS3</span>
+                    <span class="badge rounded-pill">BEM</span>
                     <span class="badge rounded-pill">Less</span>
                     <span class="badge rounded-pill">SASS</span>
+                    <span class="badge rounded-pill">Bootstrap</span>
                     <span class="badge rounded-pill">GitHub</span>
+                    <span class="badge rounded-pill">GitLab</span>
                     <span class="badge rounded-pill">Node</span>
-                    <span class="badge rounded-pill">NPM</span>
+                    <span class="badge rounded-pill">npm</span>
+                    <span class="badge rounded-pill">Yarn</span>
                     <span class="badge rounded-pill">Jest</span>
-                    <span class="badge rounded-pill">Storybook</span>
                     <span class="badge rounded-pill">Testing Library</span>
+                    <span class="badge rounded-pill">Storybook</span> 
                     <span class="badge rounded-pill">Jenkins</span>
+                    <span class="badge rounded-pill">GitHub Actions</span>
+                    <span class="badge rounded-pill">Doker</span>
                     <span class="badge rounded-pill">AWS</span>
                     <span class="badge rounded-pill">Prototyping</span>
+                    <span class="badge rounded-pill">ESLint</span>
+                    <span class="badge rounded-pill">Prettier</span>
                   </div>
                 </div>
               </div>
@@ -1035,6 +1041,8 @@
                     <span class="badge rounded-pill">Clean Code</span>
                     <span class="badge rounded-pill">Technical Lead</span>
                     <span class="badge rounded-pill">Project Management</span>
+                    <span class="badge rounded-pill">SEO</span>
+                    <span class="badge rounded-pill">Accessibility</span>
                   </div>
                 </div>
               </div>
