--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     **/
   -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,9 +18,34 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Graduated in Systems for Internet by the institution of Technology Alcides Maya with  graduation in User Experience by the institution UniRitter."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link href="%PUBLIC_URL%/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link
+      href="%PUBLIC_URL%/android-chrome-192x192.png"
+      rel="android-chrome"
+      sizes="192x192"
+    />
+    <link
+      href="%PUBLIC_URL%/android-chrome-512x512.png"
+      rel="android-chrome"
+      sizes="512x512"
+    />
+    <link href="%PUBLIC_URL%/mstile-150x150.png" rel="mstile" sizes="150x150" />
+    <meta
+      property="og:description"
+      content="Graduated in Systems for Internet by the institution of Technology Alcides Maya with  graduation in User Experiencie by the institution UniRitter."
+    />
+    <meta property="og:title" content="Tatieli Ramos" />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/social-media-1200x630.jpg"
+    />
+    <meta property="og:url" content="http://tatielirb.com.br" />
+    <meta property="og:type" content="website" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
