chore: added link img

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
       content="Graduated in Systems for Internet by the institution of Technology Alcides Maya with  graduation in User Experience by the institution UniRitter."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32x32.png" />
     <link href="%PUBLIC_URL%/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="%PUBLIC_URL%/social-media-1200x630.jpg" rel="social-media" />
     <link
       href="%PUBLIC_URL%/android-chrome-192x192.png"
       rel="android-chrome"
